--- a/templates/page/main.html
+++ b/templates/page/main.html
@@ -333,233 +333,54 @@
                 <div class="rows">
                     <article>
                         <h2 class="textCenter h2">
-                            Awesome LIVE Online Coding Classes for Kids
+                            Welome Parents! Let's talk online coding classes for kids.
                         </h2>                          
                     </article>
                   
                 </div>
             </div>
         </section>
-        <section id="onlinePage">
+
+        <section>
             <div class="container">
                 <div class="rows">
                     <article>
                         <p>
-                            In this time of education uncertainty, CodeAdvantage provides a vibrant learning path where children look forward to their classes, opt into extra enrichment activities, and create exciting new things with code!
+                            This year, it feels like there are more questions than answers when it comes to our children’s education. We get it. We’re parent’s like you. And, we’re worried about our kids too.
                         </p>
                         <p>
-                            Through LIVE online instruction and a project-based curriculum, our learners have fun, connect, and grow. And, with choices for small group and private online classes, CodeAdvantage can fit into what ever learning path you have chosen this year—remote schooling, learning pods, homeschooling, or even a hybrid approach.                         
-                        </p>
-
-
-                        <div class="warningText textCenter">
-                            <p>
-                                CONSIDER US YOUR ONLINE CODING CLASS CONCIERGE
-                            </p>
-                            <p> Three ways to get exactly what you're looking for.</p>
-                        </div>
-                        <ol class="mb-middle">
-                            <li>
-                                <p>
-                                    <b>
-                                        Need to fill a slot in the schedule? 
-                                    </b>
-                                    Register for one of our many weekly or daily classes. On some days, we run more than 100 classes across many time zones. Receive discounted rates depending on the class time you pick
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                    <b>
-                                        Want your child to spend more time with friends?
-                                    </b>
-                                    Select our My Friends Online  offering, where we create classes for a custom pod of your child's friends at the day and time of your choosing
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                    <b>
-                                        Looking for a deep dive?
-                                    </b>
-                                    Schedule some 1:1 time with one of our Rockstar instructors. Pick an off-peak time and receive discounted rates. 
-                                </p>
-                            </li>
-                        </ol>
-                        <h4 class="h4"><a href="#" style="text-decoration: none;">Find Classes to Fit your Child’s Grade Level</a></h4>
-                        <p class="mb-middle">
-                            Our coding instruction spans K through 8th grade. Click on the red, blue, and yellow blocks below to explore 
-                            pages with detailed class descriptions. 
+                            The good news is that coding is well-suited to distance-learning.
                             <strong>
-                                Classes start at $195 for ten hours of instruction!
+                                We were a leader in LIVE online coding classes 
+                                before the world changed, and have remained nimble in this fluid environment—responding swiftly to evolving customer needs. 
                             </strong>
                         </p>
-                        <div id="schemes" class="pb-text">
-                            <div class="wrapper online">
-                                <div class="heading k border">K</div>
-                                <div class="heading one border">1</div>
-                                <div class="heading two border">2</div>
-                                <div class="heading three border">3</div>
-                                <div class="heading four border">4</div>
-                                <div class="heading five border">5</div>
-                                <div class="heading six border">6</div>
-                                <div class="heading seven border">7</div>
-                                <div class="heading eight">8+</div>
-                                <div class="blue-box box-text scratchJr"> <a target="_blank" href="/online/scratch-jr"> Scratch Jr</a></div>
-                                <div class="blue-box box-text VGD3d"><a target="_blank" href="/online/intro-to-coding">3D Video Game Design</a> </div>
-                                <div class="blue-box box-text scratch"> <a target="_blank" href="/online/intermediate-coding">Scratch</a> </div>
-                                <div class="blue-box box-text minecraftJavaMods" style="word-break: break-all;"> <a target="_blank" href="/online/minecraft-java-mods">Minecraft Java Mods</a> </div>
-                                <div class="purple-box box-text modding"> <a target="_blank" href="/online/minecraft-modding-java"> Minecraft Modding: Java</a></div>
-                                <div class="green-box box-text club"> <a target="_blank" href="/online/minecraft-club">Minecraft Club</a> </div>
-                                <div class="green-box box-text robloxB"> <a target="_blank" href="/online/roblox-build">Roblox Build</a> </div>
-                                <div class="purple-box box-text robloxC"> <a target="_blank" href="/online/roblox-code">Roblox Code</a> </div>     
-                                <div class="purple-box box-text python"><a target="_blank" href="/online/advanced-coding"> Python</a></div>
-                                <div class="purple-box box-text web"><a target="_blank" href="/online/web-development"> Web Development</a></div>   
-                            </div>
-                            <div class="schemeLegend">
-                                <div class="schemeLegend__item">
-                                    <div class="schemeLegend__box"></div>
-                                    <p>Block Based Coding</p>
-                                </div>
-                                <div class="schemeLegend__item">
-                                    <div class="schemeLegend__box schemeLegend__box--yellow"> </div>
-                                    <p>Creative Game Design</p>
-                                </div>
-                                <div class="schemeLegend__item">
-                                    <div class="schemeLegend__box schemeLegend__box--blue"></div>
-                                    <p>Text Based Coding</p>
-                                </div>
-                            </div>
-                        </div>
-                        <blockquote class="blockquote">
-                            <p>
-                                <b>
-                                    <i>
-                                        The quality of your classes has been amazing. You are doing better with online learning than my son's small private school! He loves his classes and the instructors! We will be signing up for many more classes into the fall. Thank you for being there for us during these times!!!                                    </i>
-                                </b>  
-                                — CodeAdvantage Parent
-                            </p>
-                        </blockquote>
-                        
-                        <h2 class="h2">
-                            CodeAdvantage featured in the press:
-                        </h2>
+                        <p>
+                            Coding refines critical thinking, inspires innovation and invention, and brings imaginations to life! With our LIVE Rockstar Instructors, every online coding class is a fun and highly interactive experience that leaves learners with a sense of accomplishment.
 
-                        <div class="pressBlock pressBlock--left">
-                            <a href="https://www8.gsb.columbia.edu/articles/columbia-business/coding-classes-kids-mark-shift-educational-priorities" title="Writing the Code for Success" target="_blank">
-                                <img class="alignnone size-medium wp-image-2130" src="/CA/uploads/ColumbiaUniversity-1-150x300.png" alt="Columbia University" width="200" height="100" />
-                            </a>
-                            <a href="https://www.timeout.com/new-york-kids/things-to-do/codeadvantage" target="_blank" title="CodeAdvantage in Time Out">
-                                <img class="alignnone size-medium wp-image-2137" src="/CA/uploads/Times-Out-1-300x300.png" alt="Time Out New York" width="100" height="100" />
-                            </a>
-                            <a href="https://vimeo.com/237738680" title="CodeAdvantage Makes Coding Accessible for Kids" target="_blank">
-                                <img class="alignnone size-medium wp-image-2136" src="/CA/uploads/PBS-300x300.jpg" alt="Public Broadcasting Service" width="100" height="100" />
-                            </a>
-                            <a href="https://mommypoppins.com/new-york-city-kids/directory/virtual/codeadvantage" title="CodeAdvantage on MommyPoppins" target="_blank">
-                                <img class="alignnone size-medium wp-image-2133" src="/CA/uploads/Mommy-Poppins-300x300.jpg" alt="Mommy Poppins New Jersey" width="100" height="100"  />
-                            </a>
-                        </div>
-
+                            <strong>
+                                Even during these uncertain times, your child can develop technology skills that are certain to serve them well down the road.
+                            </strong>
+                        </p>
+                        <p>
+                            We appreciate you taking the time to learn about CodeAdvantage, and we hope to be a part of  your child’s educational journey. 
+                        </p>
+                        <img style="max-width: 230px;" src="/CA/uploads/HappyCodding.png" alt="Happy Codding!">
                     </article>
                     <aside>
                         <div class="sideBanner">
-                            <div class="sideBanner__down bgOrange">
-                                <h5 class="h5">
-                                    <strong>
-                                        Benefits beyond the class. 
-                                    </strong>
-                                </h5>
-                                <ul>
-                                    <li>
-                                        <p>
-                                             Access to an online portal that maps the learning journey. 
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <p>
-                                            Concept review tools.
-                                        </p>
-                                        
-                                    </li>
-                                    <li>
-                                        <p>
-                                        Additional enrichment activities.
-                                        </p>
-                                    </li>
-                                    <li>
-                                        <p> Digital badging.</p>
-                                    </li>
-                                    <li>
-                                        <p>
-                                          Class time text reminders!  
-                                        </p>
-                                    </li>
-                                </ul>
+                            <div class="sideBanner__up">
+                                <img src="/CA/uploads/Charu-1-300x240.jpg"  alt="Charu">
                             </div>
                         </div>
-                        <div class="sideBanner">
-                                <div class="containerProgress">
-                                    <div class="cardProgress">
-                                        <div class="face face1">
-                                            <div class="content">
-                                                <img src="/CA/uploads/trophy-1-150x150.png">
-                                                <h3> Python Level 1</h3>
-                                            </div>
-                                        </div>
-                                        <div class="face face2">
-                                            <div class="content">
-                                                <h5>Congratulations Dylan on completing  Python Level 1!</h5>
-                                                <p>In this class you mastered the following skills:</p>
-                                                <ul>
-                                                    <li>
-                                                        <p>Created basic scripts to run collections of commands</p>
-                                                    </li>
-                                                    <li>
-                                                        <p>Designed functions to handle user-defined operations</p>
-                                                    </li>
-                                                    <li>
-                                                        <p>
-                                                            Developed playable games like the&nbsp; Random&nbsp;Number Guessing game and Hangman
-                                                        </p>
-                                                    </li>
-                                                </ul>
-                                                <p>
-                                                    You are a master of the basics of Python, as well as general code design. You can show off your new skills and games, add to them and try your hand at creating your own functional games!
-
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                        </div>
-
                         <div class="sideBanner">
                             <div class="sideBanner__up">
-                                <a class="vp-a" href="https://www.youtube.com/watch?v=oN8d-BSFaHM">
-                                    <img class="vp-img" src="/CA/uploads/vc-play3.png"  alt="CA Online Classes">
-                                </a>
+                                <img class="vp-img" src="/CA/uploads/RebeccaManciniPhotography-5-600x423.jpg"  alt="Co-Founders, Charu Chaturvedi and Paul May">
                             </div>
-                            <div class="sideBanner__down">
-                                <form action="" id="onlineEmail">
-                                    <p>
-                                        For news & special offers, subscribe to our mailing list!
-                                    </p>
-                                    <input type="text" placeholder="email address" name="email" required>
-                                    <input type="submit" class="btn" value="SUBSCRIBE" >
-                                </form>
+                            <div class="sideBanner__down textCenter">
+                                <h4 class="h4">Co-Founders, Charu Chaturvedi and Paul May</h4>
                             </div>
                         </div>
-                        <!-- <div class="sideBanner">
-                            <div class="sideBanner__down textCenter">
-                                <h5 class="h5">
-                                    <strong>It's the  little things.</strong>
-                                </h5>
-                                <p>
-                                    We send a text reminder if your child is unexpectedly missing from a session.
-                                </p>
-                                <div class="supportChat">
-                                    <img src="/CA/uploads/suppurtchat.PNG" alt="">
-                                </div>
-                            </div>
-                        </div> -->
                     </aside>
                 </div>
             </div>
