--- a/templates/page/main.html
+++ b/templates/page/main.html
@@ -368,11 +368,9 @@
                         <img style="max-width: 230px;" src="/CA/uploads/HappyCodding.png" alt="Happy Codding!">
                     </article>
                     <aside>
-                        <div class="sideBanner">
-                            <div class="sideBanner__up">
-                                <img src="/CA/uploads/Charu-1-300x240.jpg"  alt="Charu">
-                            </div>
-                        </div>
+                        
+                        <img style="width: 100%; margin-bottom: 25px;" src="/CA/uploads/Charu-1-300x240.jpg"  alt="Charu">
+
                         <div class="sideBanner">
                             <div class="sideBanner__up">
                                 <img class="vp-img" src="/CA/uploads/RebeccaManciniPhotography-5-600x423.jpg"  alt="Co-Founders, Charu Chaturvedi and Paul May">
