--- a/templates/page/main.html
+++ b/templates/page/main.html
@@ -386,6 +386,63 @@
 
         <section>
             <div class="container">
+                <div class="row">
+                    <article>
+                        <div class="blockTextWrapper">
+                            <div class="blockText">
+                                <h5 class="h5">
+                                    Lessons that get kids excited to code! 
+                                </h5>
+                                <p>
+                                    Our project-based curriculum is developed inhouse by talented coders with extensive experience 
+                                    instructing children ages 6-13. They know the nuances of engaging kids in each age group and roll out new 
+                                    lessons as new trends emerge in learner interests.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="blockTextWrapper">
+                            <div class="blockText">
+                                <h5 class="h5">
+                                    Digital badging, enrichment, and more! 
+                                </h5>
+                                <p>
+                                    CodeAdvantage learners can progress through multi-level learning journeys in each coding discipline and earn 
+                                    digital badges as they go! Our online portal captures and maps learning progress, suggests next steps, and provides 
+                                    content recap and enrichment activities.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="blockTextWrapper">
+                            <div class="blockText">
+                                <h5 class="h5">
+                                    Rockstar Instructors who love what they do!
+                                </h5>
+                                <p>
+                                    Our instructors tell us that they wish they had this experience when they were kids. 
+                                    They promote a fun and social class environment and engage with every student in every class. 
+                                    All of them have prior experience working with children, and are pursuing careers in STEM. 
+                                </p>
+                            </div>
+                        </div>
+                        <div class="blockTextWrapper">
+                            <div class="blockText">
+                                <h5 class="h5">
+                                    Class choices that fit with your schedule!
+                                </h5>
+                                <p>
+                                    Whatever your child’s learning plan looks like this year, CodeAdvantage has an offering to map to 
+                                    their needs. You can choose from our robust calendar of scheduled classes, curate a class with your child’s 
+                                    buddies through My Friends Online, or book flexible private instruction.
+                                </p>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
                 <div class="rows">
                     <img class="size-medium  divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
                 </div>
