--- a/css/main.css
+++ b/css/main.css
@@ -920,6 +920,8 @@ aside {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .blockTextWrapper .blockText {
