--- a/templates/page/main.html
+++ b/templates/page/main.html
@@ -388,6 +388,9 @@
             <div class="container">
                 <div class="row">
                     <article>
+                        <h3 class="h3 textCenter">
+                            Online coding classes designed for what you and your child need today.
+                        </h3>
                         <div class="blockTextWrapper">
                             <div class="blockText">
                                 <h5 class="h5">
