--- a/css/main.css
+++ b/css/main.css
@@ -925,14 +925,19 @@ aside {
 }
 
 .blockTextWrapper .blockText {
-  width: 45%;
+  width: 49%;
   margin-bottom: 25px;
   background-color: #b3e5fc;
+  padding: 15px 15px 25px;
 }
 
 .blockTextWrapper .blockText .h5 {
   font-weight: bold;
   color: #fe6500;
+}
+
+.blockTextWrapper .textRight {
+  text-align: right;
 }
 
 .containerProgress {
