--- a/templates/page/main.html
+++ b/templates/page/main.html
@@ -392,7 +392,7 @@
                             Online coding classes designed for what you and your child need today.
                         </h3>
                         <div class="blockTextWrapper">
-                            <div class="blockText">
+                            <div class="blockText textRight">
                                 <h5 class="h5">
                                     Lessons that get kids excited to code! 
                                 </h5>
@@ -412,7 +412,7 @@
                                     content recap and enrichment activities.
                                 </p>
                             </div>
-                            <div class="blockText">
+                            <div class="blockText textRight">
                                 <h5 class="h5">
                                     Rockstar Instructors who love what they do!
                                 </h5>
