--- a/css/main.css
+++ b/css/main.css
@@ -932,12 +932,23 @@ aside {
 }
 
 .blockTextWrapper .blockText .h5 {
-  font-weight: bold;
-  color: #fe6500;
+  width: 100%;
+}
+
+@media only screen and (max-width: 768px) and (min-width: 0px) {
+  .blockTextWrapper .blockText {
+    text-align: left;
+  }
 }
 
 .blockTextWrapper .textRight {
   text-align: right;
+}
+
+@media only screen and (max-width: 768px) and (min-width: 0px) {
+  .blockTextWrapper .textRight {
+    text-align: left;
+  }
 }
 
 .containerProgress {
