--- a/css/main.css
+++ b/css/main.css
@@ -932,12 +932,12 @@ aside {
 }
 
 .blockTextWrapper .blockText .h5 {
-  width: 100%;
+  color: #FE6500;
 }
 
 @media only screen and (max-width: 768px) and (min-width: 0px) {
   .blockTextWrapper .blockText {
-    text-align: left;
+    width: 100%;
   }
 }
 
