--- a/css/main.scss
+++ b/css/main.scss
@@ -926,11 +926,11 @@ aside {
     padding: 15px 15px 25px;
 
     .h5{
-      width: 100%;
+      color: #FE6500;
     }
 
     @media only screen and (max-width: 768px) and (min-width: 0px) {
-      text-align: left;
+      width: 100%;
     }
   }
 
