--- a/css/main.css
+++ b/css/main.css
@@ -928,7 +928,7 @@ aside {
   width: 49%;
   margin-bottom: 25px;
   background-color: #b3e5fc;
-  padding: 15px 15px 25px;
+  padding: 15px 15px 35px 45px;
 }
 
 .blockTextWrapper .blockText .h5 {
@@ -943,6 +943,7 @@ aside {
 
 .blockTextWrapper .textRight {
   text-align: right;
+  padding: 15px 45px 35px 15px;
 }
 
 @media only screen and (max-width: 768px) and (min-width: 0px) {
