--- a/css/main.scss
+++ b/css/main.scss
@@ -923,7 +923,7 @@ aside {
     width: 49%;
     margin-bottom: 25px;
     background-color:#b3e5fc;
-    padding: 15px 15px 25px;
+    padding: 15px 15px 35px 45px;
 
     .h5{
       color: #FE6500;
@@ -936,6 +936,7 @@ aside {
 
   .textRight{
     text-align: right;
+    padding: 15px 45px 35px 15px;
     @media only screen and (max-width: 768px) and (min-width: 0px) {
       text-align: left;
     }
