--- a/css/main.css
+++ b/css/main.css
@@ -938,6 +938,7 @@ aside {
 @media only screen and (max-width: 768px) and (min-width: 0px) {
   .blockTextWrapper .blockText {
     width: 100%;
+    padding: 15px 15px 35px 15px;
   }
 }
 
@@ -949,6 +950,7 @@ aside {
 @media only screen and (max-width: 768px) and (min-width: 0px) {
   .blockTextWrapper .textRight {
     text-align: left;
+    padding: 15px 15px 35px 15px;
   }
 }
 
