--- a/templates/page/main.html
+++ b/templates/page/main.html
@@ -28,6 +28,8 @@
     <link rel="stylesheet" href="/CA/css/tooltipster/css/tooltipster.bundle.css">
     <link rel="stylesheet" href="/CA/css/tooltipster/css/plugins/tooltipster/sideTip/themes/tooltipster-sideTip-shadow.min.css">
     <link rel="stylesheet" href="/CA/css/styles.css" type='text/css'>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type='text/css'>
+
 
 
     <!--n2css-->
@@ -388,7 +390,7 @@
             <div class="container">
                 <div class="row">
                     <article>
-                        <h3 class="h3 textCenter">
+                        <h3 class="h3 textCenter mb-middle">
                             Online coding classes designed for what you and your child need today.
                         </h3>
                         <div class="blockTextWrapper">
@@ -401,6 +403,9 @@
                                     instructing children ages 6-13. They know the nuances of engaging kids in each age group and roll out new 
                                     lessons as new trends emerge in learner interests.
                                 </p>
+                                <div class="blockText__img">
+                                    <i class="fa fa-check-circle"></i>
+                                </div>
                             </div>
                             <div class="blockText">
                                 <h5 class="h5">
@@ -421,6 +426,9 @@
                                     They promote a fun and social class environment and engage with every student in every class. 
                                     All of them have prior experience working with children, and are pursuing careers in STEM. 
                                 </p>
+                                <div class="blockText__img">
+                                    <i class="fa fa-check-circle"></i>
+                                </div>
                             </div>
                             <div class="blockText">
                                 <h5 class="h5">
