--- a/css/main.scss
+++ b/css/main.scss
@@ -924,9 +924,19 @@ aside {
     margin-bottom: 25px;
     background-color:#b3e5fc;
     padding: 15px 55px 35px 15px;
+    position: relative;
+
 
     .h5{
       color: #FE6500;
+    }
+
+    .blockText__img{
+      position: absolute;
+      font-size: 50px;
+      color: #FE6500;
+      bottom: 0;
+      left: 0;
     }
 
     @media only screen and (max-width: 768px) and (min-width: 0px) {
@@ -938,6 +948,9 @@ aside {
   .textRight{
     text-align: right;
     padding: 15px 15px 35px 55px;
+    .blockText__img{
+      right: 0;
+    }
     @media only screen and (max-width: 768px) and (min-width: 0px) {
       text-align: left;
       padding: 15px 15px 35px 15px;
