--- a/templates/page/main.html
+++ b/templates/page/main.html
@@ -416,6 +416,9 @@
                                     digital badges as they go! Our online portal captures and maps learning progress, suggests next steps, and provides 
                                     content recap and enrichment activities.
                                 </p>
+                                <div class="blockText__img">
+                                    <i class="fa fa-check-circle"></i>
+                                </div>
                             </div>
                             <div class="blockText textRight">
                                 <h5 class="h5">
