--- a/css/main.scss
+++ b/css/main.scss
@@ -937,6 +937,7 @@ aside {
       color: #FE6500;
       bottom: 0;
       right: 0;
+      text-align: right;
     }
 
     @media only screen and (max-width: 768px) and (min-width: 0px) {
@@ -950,6 +951,7 @@ aside {
     padding: 15px 15px 35px 55px;
     .blockText__img{
       left: 0;
+      text-align: left;
     }
     @media only screen and (max-width: 768px) and (min-width: 0px) {
       text-align: left;
