--- a/templates/page/main.html
+++ b/templates/page/main.html
@@ -442,6 +442,9 @@
                                     their needs. You can choose from our robust calendar of scheduled classes, curate a class with your child’s 
                                     buddies through My Friends Online, or book flexible private instruction.
                                 </p>
+                                <div class="blockText__img">
+                                    <i class="fa fa-check-circle"></i>
+                                </div>
                             </div>
                         </div>
                     </article>
